--- a/app/views/items/_grade.html.erb
+++ b/app/views/items/_grade.html.erb
@@ -1,6 +1,6 @@
 <small><%= date_span_with_title(grade.updated_at)%> <%= t(:by) %> <%= grade.grader_name || "Graderbot" %></small>
 <h5 class="card-title">
-	<%= grade.pset.name %> <%= t(:was_graded) %><br>
+	<%= grade.pset_name %> <%= t(:was_graded) %><br>
 </h5>
 <p id="grade_buttons">
 
