--- a/app/views/admin/site/_permissions.html.erb
+++ b/app/views/admin/site/_permissions.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'Edit permissions', admin_site_permissions_path, remote: true, data: { trigger: 'modal' }, class: 'btn btn-secondary' %>
+<%= link_to 'Edit permissions', admin_users_path, remote: true, class: 'btn btn-secondary' %>
