--- a/app/views/alerts/_form.html.erb
+++ b/app/views/alerts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@alert) do |f| %>
+<%= form_for(@alert, remote: @remote_links) do |f| %>
 
 <% if @alert.errors.any? %>
 <div id="error_explanation">
@@ -24,7 +24,7 @@
 	<label><%= f.check_box :published %> Publish in announcements</label>
 </div>
 <div class="checkbox">
-	<label><%= check_box_tag :send_mail %> Send an e-mail with the current text</label>
+	<label><%= check_box_tag :send_mail %> Send an e-mail with the current text (now!)</label>
 </div>
 
 <div class="radio">
@@ -37,7 +37,9 @@
   content_tag(:div) { b.label { b.radio_button + " " + b.text } }
 end %>
 
-<div class="actions clearfix">
+
+<div class="mt-3 actions clearfix">
+	<%= render partial: 'alerts/back' %>
 	<%= f.submit class: 'btn btn-primary pull-right' %>
 </div>
 
