--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -2,30 +2,4 @@
 
 <h1>Listing Alerts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th>Published</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @alerts.each do |alert| %>
-      <tr>
-        <td><%= alert.title %></td>
-        <td><%= alert.body %></td>
-        <td><%= alert.published %></td>
-        <td><%= link_to 'Show', alert %></td>
-        <td><%= link_to 'Edit', edit_alert_path(alert) %></td>
-        <td><%= link_to 'Destroy', alert, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Alert', new_alert_path %>
+<%= render partial: 'index' %>
