--- a/app/views/home/announcements.html.erb
+++ b/app/views/home/announcements.html.erb
@@ -1,5 +1,5 @@
 <div id="timeline" class="row">
 	<div class="col">
-		<%= render partial: "alerts" %>
+		<%= render partial: 'alert', collection: @alerts %>
 	</div>
 </div>
