--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,14 +1,15 @@
 <% if current_user.admin? %>
 
+<%= link_to fa_icon("line-chart") + 'Overview', schedule_overview_path, class: 'dropdown-item' %>
+<%= link_to fa_icon("file-text-o") + 'Grading', grading_index_path, class: 'dropdown-item' %>
 <% if Settings.hands_allow %>
 <%= link_to fa_icon("hand-pointer-o") + 'Hands', hands_path, class: 'dropdown-item' %>
 <% end %>
+<div class="dropdown-divider"></div>
+<%= link_to fa_icon("bullhorn") + 'Announcements...', alerts_path, remote: true, class: 'dropdown-item' %>
 <% if Settings.tests_present %>
 <%= link_to fa_icon("check") + 'Tests...', tests_path, remote: true, class: 'dropdown-item' %>
 <% end %>
-<div class="dropdown-divider"></div>
-<%= link_to fa_icon("line-chart") + 'Overview', schedule_overview_path, class: 'dropdown-item' %>
-<%= link_to fa_icon("file-text-o") + 'Grading', grading_index_path, class: 'dropdown-item' %>
 <div class="dropdown-divider"></div>
 <%= link_to fa_icon("sliders") + 'Course administration...', admin_course_path, remote: true, class: 'dropdown-item' %>
 <%= link_to fa_icon("cog") + 'Site configuration...', admin_site_path, remote: true, class: 'dropdown-item' %>
