--- a/app/views/tests/results/_show.html.erb
+++ b/app/views/tests/results/_show.html.erb
@@ -1,32 +1,35 @@
 <%= form_with url: test_results_path(@pset), method: :patch do |f| %>
-<table class="table" style="width:auto">
+<table class="table table-borderless" class="w-100">
 	<tr>
-		<td>Name</td>
+		<th class="p-1">Name</th>
 		<% if @pset.config %>
 		<% @pset.config['subgrades'].each do |subgrade_name, subgrade_type| %>
-		<td><%= subgrade_name.capitalize %></td>
+		<th class="p-1"><%= subgrade_name.capitalize %></th>
 		<% end %>
 		<% end %>
-		<td>Notes</td>
+		<th class="p-1">Notes</th>
 	</tr>
 	<% @students.each do |s| %>
 	<tr>
-		<td>
+		<td class="p-1">
 			<input type="text" readonly class="form-control-plaintext" id="staticEmail" value="<%= s.name %>">
 		</td>
 		<% if @pset.config %>
 		<% bla = s.submits.where(pset_id: @pset.id).first%>
 		<% @pset.config['subgrades'].each do |subgrade_name, subgrade_type| %>
-		<td>
-			<input type="text" name="grades[<%= s.id %>][subgrades][<%= subgrade_name %>]" class="form-control" placeholder="" value="<%= bla.grade.subgrades[subgrade_name] if bla && bla.grade %>">
+		<td class="p-1">
+			<input type="text" name="grades[<%= s.id %>][subgrades][<%= subgrade_name %>]" class="form-control form-control-sm" placeholder="" value="<%= bla.grade.subgrades[subgrade_name] if bla && bla.grade %>">
 		</td>
 		<% end %>
-		<td>
-			<input type="text" name="grades[<%= s.id %>][notes]" class="form-control" placeholder="" value="<%= bla.grade.notes if bla && bla.grade %>">
+		<td class="p-1">
+			<input type="text" name="grades[<%= s.id %>][notes]" class="form-control form-control-sm" placeholder="" value="<%= bla.grade.notes if bla && bla.grade %>">
 		</td>
 		<% end %>
 	</tr>
 	<% end %>
 </table>
-<input type="submit" class="btn btn-secondary">
+<div class="mt-3 actions clearfix">
+	<%= link_to 'Back to list', tests_path, class: 'btn btn-light' %>
+	<%= f.submit class: 'btn btn-primary pull-right' %>
+</div>
 <% end %>
