--- a/app/views/users/_title.html.erb
+++ b/app/views/users/_title.html.erb
@@ -56,10 +56,10 @@
 			<% end %>
 			<% if current_user.admin? %>
 			<div class="dropdown-divider"></div>
-			<%= link_to 'Make assistant', [@student, user: { role: :assistant }], method: :put, class: 'dropdown-item' %>
-			<%= link_to 'Make head', [@student, user: { role: :head }], method: :put, class: 'dropdown-item' %>
-			<%= link_to 'Make admin', [@student, user: { role: :admin }], method: :put, class: 'dropdown-item' %>
-			<%= link_to 'Undo admin', [@student, user: { role: :student, schedule_id: nil }], method: :put, class: 'dropdown-item' %>
+			<%= link_to 'Make assistant', admin_user_set_role_path(@student, user: { role: :assistant }), method: :patch, remote: true, class: 'dropdown-item' %>
+			<%= link_to 'Make head', admin_user_set_role_path(@student, user: { role: :head }), method: :patch, remote: true, class: 'dropdown-item' %>
+			<%= link_to 'Make admin', admin_user_set_role_path(@student, user: { role: :admin }), method: :patch, remote: true, class: 'dropdown-item' %>
+			<%= link_to 'Undo admin', admin_user_set_role_path(@student, user: { role: :student, schedule_id: nil }), method: :patch, remote: true, class: 'dropdown-item' %>
 			<div class="dropdown-divider"></div>
 			<%= link_to_if GradeTools.available?, 'Calculate final grade', user_calculate_final_grade_path(@student), method: :post, class: 'dropdown-item' %>
 			<% end %>
