--- a/app/views/hands/raises/_location.html.erb
+++ b/app/views/hands/raises/_location.html.erb
@@ -1,9 +1,8 @@
 <div style="text-align: center; padding:1em; padding-bottom:0.25em;">
 	<% assist = @assist_available.shuffle.first %>
-	<div style="position:absolute; left:2px; top:0;"><%= link_to '<span class="glyphicon glyphicon-remove" data-toggle="tooltip" title="Cancel your help request!"></span>'.html_safe, ask_cancel_path, method: :post, remote: true %></div>
 	<h3 style="margin-bottom:0.75em;"><%= @greeting %>!<br> What's your location?</h3>
 	<p>Entering your location details ensures that we can find you if we'd like to discuss something.</p>
-	<%= form_tag(ask_set_location_path, method: :post, remote: true) do %>
+	<%= form_tag(set_location_hands_raise_path, method: :patch, remote: true) do %>
 		<input type="text" name="location" class="form-control" required placeholder="" style="margin-top:0.5em">
 		<button id="loc-button" data-loading-text="Just a sec..." type="submit" style="margin-top:0.5em; margin-bottom:0.5em" class="btn btn-default btn-sm btn-block btn-warning" name="how" value="hands">That's my location!</button>
 	<% end %>
