--- a/app/views/schedules/schedules/show.html.erb
+++ b/app/views/schedules/schedules/show.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'tabs' %>
 <%= render partial: 'table', locals: { users: @users, psets: @psets } %>
-<%= render partial: "modal_browser" %>
+<%= render partial: "modal/modal_browser" %>
 
 <script type="text/javascript" charset="utf-8">
 $(function()
