--- a/app/views/alerts/index.js.erb
+++ b/app/views/alerts/index.js.erb
@@ -1,3 +1,3 @@
 $('#modal-browser').modal('show');
-$('#modal-browser-header').html("<%= j render 'modal_title', header: 'Announcements' %>");
+$('#modal-browser-header').html("<%= j render 'modal/modal_title', header: 'Announcements' %>");
 $('#modal-browser-body').html("<%= j(render partial: 'index') %>");
