make menus more mobile-friendly

--- a/app/assets/stylesheets/includes/print.scss
+++ b/app/assets/stylesheets/includes/print.scss
@@ -13,7 +13,7 @@
 	
 	#sidebar, footer, ul.nav, #content > h1, section .video-js, iframe,
 	#schedule-column, #comments-column, .embed,
-	section#submit-content
+	section#submit-content, #float-nav
 	{
 		display:none !important;
 	}
