--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -29,11 +29,6 @@
 	}
 }
 
-#float-nav + #content
-{
-	padding-top:0 !important;
-}
-
 #content
 {
 	font-size:15px;
@@ -47,6 +42,11 @@ section h1
 	font-size:40px;
 	font-weight:500;
 	color:#111;
+}
+
+section h1:first-child
+{
+	margin-top:0;
 }
 
 // heading margins
