--- a/app/views/layouts/_brand.html.erb
+++ b/app/views/layouts/_brand.html.erb
@@ -28,7 +28,7 @@
 
 	<div class="d-none d-md-inline align-items-center">
 		<% if Settings['keyword_index'].present? %>
-		<a class="ml-3" data-toggle="collapse" data-target=".multi-collapse" href="#" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
+		<a class="ml-3" data-toggle="collapse" data-target=".multi-collapse" href="#" role="button" aria-expanded="false" aria-controls="sidebarCollapse">
 			<%= fa_icon 'search', class: 'fa-lg' %>
 		</a>
 		<% end %>
