--- a/app/views/layouts/_float_nav.html.erb
+++ b/app/views/layouts/_float_nav.html.erb
@@ -1,19 +1,7 @@
 <ul id="icon-nav" class="navbar-nav ml-auto">
 	
-	<% if current_user.senior? %>
-	<div id="search" class="dropdown form-inline">
-		<input id="student-search" type="text" autocomplete="off" class="form-control form-control-sm border-secondary" placeholder="Find student" aria-label="Find student">
-		<div id="search-results" class="dropdown-menu"></div>
-	</div>
-	<% end %>
-
-	<script>
-		$('#student-search').on('paste input', function(e) {
-			$.ajax('<%= search_users_path %>', { data: { text: $('#student-search').val() } });
-			true;
-		})
-	</script>
-
+	<%= render partial: 'layouts/search' %>
+	
 	<% if Settings.hands_allow && current_user.valid_profile? %>
 	<li class="nav-item dropdown" id="ama-nav">
 		<a href="#" id="ama-dd" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= fa_icon "hand-pointer-o", class: "fa-fw" %><%= Hand.waiting.count if current_user.staff? %></a>
@@ -31,12 +19,14 @@
 			</span>
 			<span class="d-none d-md-inline">
 			<%= current_user && current_user.name || session[:cas_user] %>
+			<% if current_user.staff? %>
 			(<%= current_user.login_id %>)
+			<% end %>
 			</span>
 		</a>
-		<ul class="dropdown-menu dropdown-menu-right" id="user-menu">
-			<%= render 'layouts/menu' %>
-		</ul>
+		<div class="dropdown-menu dropdown-menu-right" id="user-menu">
+			<%= render partial: 'layouts/menu', locals: { context: :menu } %>
+		</div>
 	</li>
 	<% elsif authenticated? %>
 	<li class="nav-item dropdown ">
