--- a/app/views/layouts/_sections.html.erb
+++ b/app/views/layouts/_sections.html.erb
@@ -2,7 +2,7 @@
 
 <li class="nav-item dropdown hidden-xs">
 	<a href="#collapse-<%= section.title.parameterize %>" class="nav-link dropdoswn-toggle" data-toggle="collapse" role="button" aria-haspopup="true" aria-expanded="false">
-		<%= fa_icon 'caret-right', class: '', style: 'width: .85rem; margin-left:-1.1rem; color: #D4DAE0' %><%= section.title %>
+		<%= fa_icon 'caret-right', class: 'd-none d-md-inline-block', style: 'width: .85rem; margin-left:-1.1rem; color: #D4DAE0' %><%= section.title %>
 	</a>
 	<ul class="nav collapse" id="collapse-<%= section.title.parameterize %>">
 		<% for page in section.pages %>
