--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				
-				<div class="collapse show multi-collapse" id="multiCollapseExample1">
+				<div class="collapse show multi-collapse w-100" id="sidebarCollapse">
 					<%= render 'layouts/sidebar' %>
 				</div>
 				
@@ -62,11 +62,11 @@
 				</div>
 				<% end %>
 
-				<div id="float-nav" class="float-md-right position-absolute position-sticky navbar navbar-expand p-3">
+				<div id="float-nav" class="d-none d-md-block float-md-right position-absolute position-sticky navbar navbar-expand p-3">
 					<%= render 'layouts/float_nav' %>
 				</div>
 
-				<div id="content" class="p-3 p-md-4 p-sm-5 p-lg-5 pt-0" <%= Settings.room_for_toc && "style=margin-right:17em;" || "" %>>
+				<div id="content" class="p-3 p-lg-4 p-xl-5 pt-3" <%= Settings.room_for_toc && "style=margin-right:17em;" || "" %>>
 					<%= yield %>
 				</div>
 
