small fixes for ipad

--- a/app/views/layouts/_brand.html.erb
+++ b/app/views/layouts/_brand.html.erb
@@ -3,7 +3,7 @@
 	<%= fa_icon "terminal", class: "pull-left fa-2x text-warning" %>
 
 	<div class="d-flex flex-column flex-fill">
-		<a href="/" class="navbar-brand pb-0 flex-fill d-flex">
+		<a href="/" class="navbar-brand pb-0">
 			<span class="course-name"><%= Settings["course"] && Settings["course"]["name"] %></span>
 		</a>
 		
