--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,7 +66,7 @@
 					<%= render 'layouts/float_nav' %>
 				</div>
 
-				<div id="content" class="p-3 p-lg-4 p-xl-5 pt-3" <%= Settings.room_for_toc && "style=margin-right:17em;" || "" %>>
+				<div id="content" class="p-3 p-sm-4 px-lg-5" <%= Settings.room_for_toc && "style=margin-right:17em;" || "" %>>
 					<%= yield %>
 				</div>
 
