--- a/app/views/layouts/hands.html.erb
+++ b/app/views/layouts/hands.html.erb
@@ -21,7 +21,7 @@
 
 	<div class="d-flex flex-column h-100">
 
-		<%= render "layouts/alerts" %>
+		<%= render "alerts" %>
 	
 		<div class="container-fluid">
 			<div class="row content">
