--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,14 +24,14 @@
 			
 			<div id="sidebar" class="navbar navbar-light d-md-block col-md-<%= Settings.room_for_toc && 3 || 4 %> p-md-4">
 
-				<%= render 'layouts/brand'%>
+				<%= render 'brand'%>
 
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				
 				<div class="collapse show multi-collapse w-100" id="sidebarCollapse">
-					<%= render 'layouts/sidebar' %>
+					<%= render 'sidebar' %>
 				</div>
 				
 				<% if Settings['keyword_index'].present? %>
@@ -53,7 +53,7 @@
 			
 			<div id="row-content" class="col-md-<%= Settings.room_for_toc && 9 || 8 %> offset-md-<%= Settings.room_for_toc && 3 || 4 %> p-0">
 	
-				<%= render "layouts/alerts" %>
+				<%= render "alerts" %>
 				
 				<% if @page and @submitted and date = @page.pset.submit_from(current_user).submitted_at %>
 				<div id="submitted_pset" class="alert alert-success">
@@ -63,7 +63,7 @@
 				<% end %>
 
 				<div id="float-nav" class="d-none d-md-block float-md-right position-absolute position-sticky navbar navbar-expand p-3">
-					<%= render 'layouts/float_nav' %>
+					<%= render 'float_nav' %>
 				</div>
 
 				<div id="content" class="p-3 p-sm-4 px-lg-5" <%= Settings.room_for_toc && "style=margin-right:17em;" || "" %>>
