--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -13,7 +13,7 @@
 <% end %>
 
 <% content_for :footer do %>
-	<% #= render 'layouts/footer' %>
+	<%#= render 'footer' %>
 <% end %>
 
-<%= render template: "layouts/application" %>
+<%= render template: "application" %>
