--- a/app/views/admin/site/_index.html.erb
+++ b/app/views/admin/site/_index.html.erb
@@ -1,11 +1,11 @@
-<%= render partial: 'git', layout: 'modal/modal_card', locals: { title: 'Git', subtitle: nil }%>
+<%= render partial: 'git', layout: 'modal_card', locals: { title: 'Git', subtitle: nil }%>
 
-<%= render partial: 'email', layout: 'modal/modal_card', locals: { title: 'E-mail', subtitle: nil } %>
+<%= render partial: 'email', layout: 'modal_card', locals: { title: 'E-mail', subtitle: nil } %>
 
-<%= render partial: 'settings', layout: 'modal/modal_card', locals: { title: 'Settings', subtitle: nil }%>
+<%= render partial: 'settings', layout: 'modal_card', locals: { title: 'Settings', subtitle: nil }%>
 
-<%= render partial: 'dropbox', layout: 'modal/modal_card', locals: { title: 'Dropbox', subtitle: nil }%>
+<%= render partial: 'dropbox', layout: 'modal_card', locals: { title: 'Dropbox', subtitle: nil }%>
 
-<%= render partial: 'webhook', layout: 'modal/modal_card', locals: { title: 'Webhook', subtitle: nil }%>
+<%= render partial: 'webhook', layout: 'modal_card', locals: { title: 'Webhook', subtitle: nil }%>
 
-<%= render partial: 'permissions', layout: 'modal/modal_card', locals: { title: 'Permissions', subtitle: nil }%>
+<%= render partial: 'permissions', layout: 'modal_card', locals: { title: 'Permissions', subtitle: nil }%>
