--- a/app/views/home/submissions.html.erb
+++ b/app/views/home/submissions.html.erb
@@ -1,12 +1,20 @@
-<% if @items.present? %>
+<% if @overview_config.present? %>
+
 <div id="timeline" class="row flex-xl-row-reverse">
-	<% if !@overview_config.empty? %>
-		<div class="col-xl-6 col-lg-12">
-			<%= render partial: "grades_overview" %>
-		</div>
-	<% end %>
-	<div class="<%= 'col-xl-6' if !@overview_config.empty? %> col-lg-12">
+	<div class="col-12 col-xl-6">
+		<%= render partial: "grades_overview" %>
+	</div>
+	<div class="col-xl-6">
 		<%= render partial: "items/item", collection: @items %>
 	</div>
 </div>
+
+<% else %>
+
+<div id="timeline" class="row flex-xl-row-reverse">
+	<div class="col-lg-12">
+		<%= render partial: "items/item", collection: @items %>
+	</div>
+</div>
+
 <% end %>
