fix layout for tablets, normal, mobile, cleanup

--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -13,7 +13,7 @@
 .navbar-brand .course-name
 {
     font-weight:bold;
-    white-space:normal;
+    white-space:no-wrap;
 }
 
 //****************************************************************************
