--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			
-			<div id="sidebar" class="navbar navbar-light d-md-block col-md-<%= Settings.room_for_toc && 3 || 4 %> p-md-4">
+			<div id="sidebar" class="navbar navbar-light d-md-block col-md-<%= Settings.room_for_toc && 3 || 4 %> col-lg-3 p-md-4">
 
 				<%= render 'brand'%>
 
@@ -51,7 +51,7 @@
 				
 			</div>
 			
-			<div id="row-content" class="col-md-<%= Settings.room_for_toc && 9 || 8 %> offset-md-<%= Settings.room_for_toc && 3 || 4 %> p-0">
+			<div id="row-content" class="col-md-<%= Settings.room_for_toc && 9 || 8 %> offset-md-<%= Settings.room_for_toc && 3 || 4 %> col-lg-9 offset-lg-3 p-0">
 	
 				<%= render "alerts" %>
 				
@@ -62,8 +62,10 @@
 				</div>
 				<% end %>
 
-				<div id="float-nav" class="d-none d-md-block float-md-right position-absolute position-sticky navbar navbar-expand p-3">
+				<div id="float-nav" class="clearfix d-none d-md-block position-absolute position-sticky navbar navbar-expand pt-3">
+					<div class="float-md-right mt-2 mb-0 mr-2">
 					<%= render 'float_nav' %>
+					</div>
 				</div>
 
 				<div id="content" class="p-3 p-sm-4 px-lg-5" <%= Settings.room_for_toc && "style=margin-right:17em;" || "" %>>
