upgrade to c-axlsx

--- a/app/views/admin/course/_export.html.erb
+++ b/app/views/admin/course/_export.html.erb
@@ -1,2 +1,2 @@
-<%= link_to 'Export grades XSLX', admin_course_export_grades_path(format: 'xlsx'), class: 'btn btn-secondary' %>
-<%= link_to 'Export grades overview', admin_course_export_grades_path(format: 'html'), class: 'btn btn-secondary' %>
+<%= link_to 'Export grades XSLX', admin_course_export_grades_path(format: 'xlsx'), remote: false, class: 'btn btn-secondary' %>
+<%= link_to 'Export grades overview', admin_course_export_grades_path(format: 'html'), remote: false, class: 'btn btn-secondary' %>
