slight change of scenery

--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -16,6 +16,11 @@
     white-space:no-wrap;
 }
 
+.navbar-dark .brand
+{
+	color:#ffffff;
+}
+
 //****************************************************************************
 
 #sidebar
