--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -1,5 +1,15 @@
 // CSS for the theme, which is mostly the colors of elements
 
+body
+{
+	background-color:#f3f3f3;
+}
+
+body.page
+{
+	background-color:#fcfcfc;
+}
+
 #timeline .card small
 {
 	color:#339879; text-transform: uppercase; font-size:x-small;
