remove video player

--- a/app/assets/stylesheets/includes/print.scss
+++ b/app/assets/stylesheets/includes/print.scss
@@ -11,7 +11,7 @@
 		background-color:transparent ! important;
 	}
 	
-	#sidebar, footer, ul.nav, #content > h1, section .video-js, iframe,
+	#sidebar, footer, ul.nav, #content > h1, iframe,
 	#schedule-column, #comments-column, .embed,
 	section#submit-content, #float-nav
 	{
